Fix fixed table empty z-index, close #4016

--- a/components/table/style/index.less
+++ b/components/table/style/index.less
@@ -323,8 +323,6 @@
     background: @component-background;
     border-bottom: 1px solid @border-color-split;;
     text-align: center;
-    position: relative;
-    z-index: 2;
     font-size: @font-size-base;
     color: @text-color-secondary;
     .@{iconfont-css-prefix} {
